# VideoSubFinder

./: .gitignore  CMakeLists.txt  build_macos.sh
.github/workflows/: macos-build.yml
Components/FFMPEGVideo/: CMakeLists.txt  FFMPEGVideo.cpp  FFMPEGVideo.h
Components/IPAlgorithms/: CMakeLists.txt  IPAlgorithms.cpp  IPAlgorithms.h  SSAlgorithms.cpp  vision_ocr.h  vision_ocr.mm
Components/Include/: Video.h
Data/: VideoSubFinder.icns
Interfaces/VideoSubFinderWXW/: BitmapButton.h  Button.cpp  Button.h  CMakeLists.txt  Choice.cpp  ImageBox.cpp  MainFrm.cpp  MainFrm.h  MyResource.h  OCRPanel.cpp  SearchPanel.cpp  SearchPanel.h  SeparatingLine.cpp  SeparatingLine.h  SettingsPanel.cpp  StaticText.cpp  VideoBox.cpp  VideoSubFinderWXW.cpp
Settings/: general.cfg
Settings/Localization/chn/: locale.cfg
Settings/Localization/eng/: locale.cfg
Settings/Localization/rus/: locale.cfg
Settings/Localization/vie/: locale.cfg
tools/: make_macos_icon.swift
